--- a/Consumer Spending.Rmd
+++ b/Consumer Spending.Rmd
@@ -2,25 +2,25 @@
 title: "Consumer Expenditure Analysis"
 author: "Kaile Phelps"
 date: "2023-10-06"
-output: html_document
+output: "html_document"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#Consumer Expenditure Survey Analysis
+# Consumer Expenditure Survey Analysis
 
 The purpose of this analysis is to investigate trends and changes in consumer spending for different age demographics during and after the COVID pandemic lockdowns. The data has been taken from the Bureau of Labor Statistics' (BLS) [Consumer Expenditure Survey](https://www.bls.gov/cex/).
 
 
-#Data Collection
+## Data Collection
 
-I have collected the data using the recommended API from the [BLS website](https://www.bls.gov/developers/). I have stored the code related to pulling and wrangling the data into a csv in git-hub. (ADD LINK)
+I have collected the data using the recommended API from the [BLS website](https://www.bls.gov/developers/). I have stored the code related to pulling and wrangling the data into a csv in this [repository](https://github.com/kphelps-hub/Consumer-Expenditure-Survey/blob/main/Data%20Retrieval.R).
 
-Now, there is far more information that is tracked in the Customer Expenditure Survey than I could possibly breakdown and analyze, so for the purpose of this project I just wanted to keep it high level and look at the primary 14 categories of spending and broken down by age ranges. To generate more precise analysis would require delving further into some of the breakdowns of the survey. 
+There is far more information that is tracked in the Customer Expenditure Survey than I could possibly breakdown and analyze, so for the purpose of this project I wanted to keep it high level and look at the primary 14 categories of spending and broken down by age ranges. To generate more precise analysis would require delving further into some of the breakdowns of the survey. 
 
-#Loading and Cleaning the Data
+## Loading and Cleaning the Data
 
 To begin the analysis, we will first need to load the necessary packages. This analysis will primarily be using the tidyverse, ggplot2, and reshape2 packages. 
 
@@ -30,7 +30,7 @@ library(ggplot2)
 library(reshape2)
 ```
 
-We will then go ahead and read in the csv and add descriptions to the characterstic code and item codes from the data. To validate that the columns have been created successfully I went ahead and printed the first few lines of the data frame with the columns that we added. The values can be confirmed based on the glossary of the customer expenditure survey. 
+We will then go ahead and read in the csv and add descriptions to the characterstic code and item codes from the data. To validate that the columns have been created successfully I printed the first few lines of the data frame with the columns that we added. The values can be confirmed based on the glossary of the customer expenditure survey. 
 
 ```{r}
 data <- read.csv("2023_Consumer_Exp_Data.csv")
@@ -90,10 +90,8 @@ Before going any further, we should validate the structure of the data is correc
 ```{r}
 str(data)
 ```
-We can get an overview of the type of data that we have available. We have breakdowns by year, spending category (item_code), and age group (chr_code). For each of these there is a "value" column representing the amount that was spent for that particular breakdown. We can also that the "value" field is a "chr" type rather than an "int". So we will need to change the data type of the column.
+This gives us an overview of the type of data that we have available. We have breakdowns by year, spending category (item_code), and age group (chr_code). For each of these there is a "value" column representing the amount that was spent for that particular breakdown. We can also see that the "value" field is a "chr" type rather than an "int". So we will need to change the data type of the column.
 
-
-getting into the mapping, we need to change the class of the columns. This does create some NA's for Cash contributions and Reading for 2022, which are going to be limitations on the analysis. 
 ```{r}
 data$value <- as.integer(data$value)
 ```
@@ -116,24 +114,26 @@ data <- data %>%
 
 With that our dataset is ready to be used for our analysis. 
 
-#Data Analysis
+## Data Analysis
 
-##Total Consumer Spending
+### Total Consumer Spending
 
-The first piece that I want to look at is just how total spending has changed over time as that will give context when looking at how spending has changed in specific categories. 
+The first piece that I want to look at is just how total spending has changed over time as that will give context when looking at how spending has changed within specific categories. 
 
 ```{r}
 ggplot(data = data %>%
          filter(chr_code == 1,
                 item_code == 'TOTALEXP'))+
   geom_col(mapping = aes(x=year,
-                         y = value))+
+                         y = value),
+           fill = rep("#F8766D",8))+
   labs(title = "Total Consumer Unit Expenditure",
        y = "Expenditures",
        x = "Year")+
   scale_y_continuous(labels = scales::label_dollar(prefix = "$", big.mark = ","))
 ```
-The first piece that stands out is that dip in 2020 during the most sever part of the lockdown. Since we are analyzing trends in spending, it is worth creating a new column for the percent change year to year. We will go ahead and create this below. To validate the results and to see the percent changes I will print the results below.
+
+The first piece that stands out is that dip in 2020 during the most severe part of the lockdown. Since we are analyzing trends in spending, it is worth creating a new column for the percent change year to year. We will go ahead and create this below. To validate the results and to see the percent changes I will print the results below.
 
 ```{r}
 #need to create % growth field
@@ -195,9 +195,11 @@ ggplot(data = projection_plot_data)+
   scale_y_continuous(labels = scales::label_dollar(prefix = "$", big.mark = ","))
     
 ```
-From this chart, we can clearly see the dip in spending versus the projection in 2020, but by 2021 spending had essentially caught back up to the projection and 2022 had surpassed it. Based on this, there does not appear to be evidence of a trend of limited spending, if anything, this is evidence of the opposite that coming out of the pandemic people are increasing their spending more quickly than before. Whether or not this continues into 2023 and beyond will be interesting to see. As of right now 2022 could be an outlier and we are course correcting back on track or there may be a more rapid rate of growth in spending. 
 
-##Spending By Category
+From this chart, we can clearly see the dip in spending versus the projection in 2020, but by 2021 spending had essentially caught back up to the projection and 2022 had surpassed it. Based on this, there does not appear to be evidence of a trend of limited spending, if anything, this is evidence of the opposite. Coming out of the pandemic people are increasing their spending more quickly than before. Whether or not this continues into 2023 and beyond will be interesting to see. As of right now 2022 could be an outlier and we are course correcting back on track or there may be a more rapid rate of growth in spending. 
+
+### Spending By Category
+
 The next area that I am going to be analyzing is spending by category to see which categories of spending were more susceptible to change during the pandemic than others. To begin, we can look at a graph of the 14 categories
 
 ```{r}
@@ -205,7 +207,8 @@ ggplot(data = data %>%
          filter(chr_code==1,
                 item_code!='TOTALEXP'))+
   geom_col(mapping = aes(x = year,
-                         y = value))+
+                         y = value),
+           fill = "#F8766D")+
   facet_wrap(~item_code_desc, scales = "free")+
   theme(axis.text.x = element_text(angle = 45))+
   labs(title = "Spending by Category",
@@ -215,7 +218,7 @@ ggplot(data = data %>%
 
 ```
 
-We can see clearly from the above graphs that for most categories, we have a decent decrease in spending in 2020 during the year with the heaviest lock down measures and a subsequent strong increase in the last two years. Housing, Healthcare, and Personal Insurance seem to be the high dollar number outliers when it comes to this trend and that makes sense since those categories we would expect to be more inelastic than the Transportation or Food cateogries. To see which categories suffered the largest setback in 2020, I will take a look at just the percent changes from that year. 
+We can see from the above graphs that for most categories, there is a decent decrease in spending in 2020 and a subsequent strong increase in the last two years. Housing, Healthcare, and Personal Insurance are outliers when it comes to this trend, but that makes sense since those categories we would expect to be more inelastic than the Transportation or Food cateogries. To see which categories suffered the largest setback in 2020, I will take a look at just the percent changes from that year. 
 
 ```{r}
 #now let's create a chart just looking at 2020
@@ -224,13 +227,15 @@ data %>%
          chr_code %in% c(1)) %>%
   ggplot()+
   geom_col(mapping = aes(x = item_code_desc,
-                         y = pct_change))+
+                         y = pct_change),
+           fill = "#00BA38")+
   facet_wrap(~chr_code_desc)+
   theme(axis.text.x = element_text(angle = 45))+
   labs(title = "Percent Change in Spending in 2020",
         y = "Percent Change")
 ```
-This confirms the trends mentioned above with the Housing and Healthcare and Personal Insurance all increasing or staying about the same while spending in about half of the categories decreased substantially. If we were to remove those 3 categories and really focus on the more "discretionary" spending then we can get a better sense of how consumer's actively changed their purchasing habits in 2020.
+
+This confirms the trends mentioned above with the Housing and Healthcare and Personal Insurance all increasing or staying the same while spending in about half of the remaining categories decreased substantially. If we were to remove those 3 categories and really focus on the more "discretionary" spending then we can get a better sense of how consumer's actively changed their purchasing habits in 2020.
 
 ```{r}
 disc_spending <- data %>%
@@ -269,9 +274,10 @@ ggplot(total_spending)+
        color = "")
 
 ```
-Looking at just the discretionary spending shows that consumers spent about 8% less in these categories despite just an overall drop of less than 3% in total spending. We can also see that the discretionary spending increased more thantotal spending in 2021 and 2022, though it is much more closely aligned with overall spending in 2022. This does seem to indicate that some amount of the increase in spending in 2022 is likely due to increased costs of living or inflation. 
 
-#Transportation by Age
+Looking at just the discretionary spending shows that consumers spent about 8% less in these categories despite just an overall drop of less than 3% in total spending. We can also see that the discretionary spending increased more than total spending in 2021 and 2022, though it is much more closely aligned with overall spending in 2022. This does seem to indicate that some amount of the increase in spending in 2022 is likely due to increased costs of living or inflation. 
+
+### Transportation by Age
 
 In this next section I wanted to look specifically into trends within the field of transportation. Given major restrictions on travel due to the pandemic, but also an increase in the amount of remote work flexibility, this seemed like an area that would have some interesting trends. First, I just wanted to look at a quick breakdown across the age groups spending on transportation. 
 ```{r}
@@ -280,13 +286,15 @@ data %>%
          !chr_code %in% c(8,9)) %>%
   ggplot()+
   geom_col(mapping = aes(x = year,
-                         y = value))+
+                         y = value),
+           fill = "#619CFF")+
   facet_wrap(~chr_code_desc)+
   labs(title = "Transportation Expenditure by Age Range",
         y = "Transportation Expenditures",
        x = "Year")+
   scale_y_continuous(labels = scales::label_dollar(prefix = "$", big.mark = ","))
 ```
+
 Again, we see the very familiar dip in 2020 across almost all of the ages followed by strong growths in 2021 and 2022. However, what is very interesting is that there is no discernible decrease in transportation spending in the 25-34 year old households. Unsurprisingly, the growth is also relatively smaller compared to the other age categories in the following years. To break this down further, we can look specifically into the spending increases and decreases.
 
 ```{r}
@@ -314,12 +322,13 @@ data %>%
   scale_y_continuous(labels = scales::label_dollar(prefix = "$", big.mark = ","))
   
 ```
+
 From this graph we can see that transportation spending went significantly down for all age groups except 25 to 34 year olds in 2019 and then increased across the board in the following years for all age groups. Interestingly, there also seems to be a slight lag where the older age groups increased spending more in 2022 than 2021 and the younger age groups saw greater increase in 2021.
 
 
-##The final thing to look at
+### Expenditure Restructuring
 
-Finally, perhaps the most imporant thing to look as is if there is significant change in people's expenditures overall. Rather than looking at the total amount increase or descrease, I wanted to see if people's consumption patterns were shifting signficantly. To do that, I took the year over year difference in spending per category and summed up the absolute values. This provided me with a measure of changes in spending over time. 
+Finally, perhaps the most important thing to look as is if there is significant change in how much fluctuation there is between categories. Rather than looking at the total amount increase or decrease, I wanted to see if people's consumption patterns were shifting significantly. To do that, I took the year over year difference in spending per category and summed up the absolute values. This provided me with a measure of changes in spending over time. I will be labelling this column as "restructured expenditures"
 
 ```{r}
 data <- data %>%
@@ -338,15 +347,26 @@ grouped_data <- data %>%
 
 ggplot(grouped_data,
        aes(x = year,
-           y = abs_change_sum_pct,
-           color = chr_code_desc))+
-  geom_line(size = 1)
-
-ggplot(grouped_data,
-       aes(x = year,
            y = abs_change_sum,
            color = chr_code_desc))+
-  geom_line(size = 1)
+  geom_line(size = 1)+
+  labs(title = "Restructured Expenditures by Age Group",
+       y = "Restructured Expenditures",
+       x = "Year",
+       color = "Age Group")+
+  scale_y_continuous(labels = scales::label_dollar(prefix = "$", big.mark = ","))
 
 ```
-From this chart, we can see that in 2021 and 2022, there seem to be significant changes in spending as compared to the pre-pandemic years (2016 to 2019). 
+
+From this chart, we can see that most age groups in 2021 and 2022 are changing their spending habits at a greater rate than during the pre-pandemic years (2016 to 2019). Given that households are making larger and larger changes in their spending since the lockdown, there seems to be ample opportunity for new businesses and new products to reach new audiences as consumers seem to be less "locked in" to their past spending trends.
+
+## Conclusion
+
+From this analysis, the main takeaways that I have found are:
+
+1. Consumer spending decreased in 2020, but has already caught back up and outpaced projected spending in 2022.
+2. Housing and Healthcare are the most inelastic expenditure categories for consumers as they were essentially not impacted by the pandemic or the following expenditure growth.
+3. Transportation spending has rebounded significantly across all age groups. 
+4. Consumers are changing their spending habits and categories more quickly than in pre-pandemic years.
+
+There are many further opportunities to dig into the consumer expenditure report by looking towards differences across other demographics and continuing to map trends over time. Additionally, the sub-categories could reveal many more actionable insights as to where spending has increased or decreased since the pandemic, as the 14 categories analyzed here are still quite broad. 
